# zero-app

./: Cargo.toml  index.html  package.json  pnpm-lock.yaml
apps/zero-app/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/zero-app-v0/: package.json
apps/zero-app-v0/src-tauri/: Cargo.toml  tauri.conf.json
apps/zero-app-v0/src-tauri/src/: main.rs
apps/zero-app-v0/src/components/: greet.tsx
apps/zero-app/src/: App.tsx
apps/zero-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/zero-app/src/app/: global-error.tsx  layout.tsx  mdx-components.tsx  not-found.tsx  page.tsx
apps/zero-app/src/app/docs/: layout.tsx
apps/zero-app/src/app/zero/: layout.tsx  page.tsx
apps/zero-app/src/app/zero/forgotpassword/: page.tsx
apps/zero-app/src/app/zero/resetpassword/: page.tsx
apps/zero-app/src/app/zero/signin/: page.tsx
apps/zero-app/src/app/zero/signup/: page.tsx
apps/zero-app/src/components/: global-sidebar-tabs.tsx  greet.tsx  index.ts  zero-logo.tsx
