[workspace]
members = [
  "packages/zero-app-core",
  "packages/zero-app",
  "packages/zero-app-yew",
  "packages/zero-app-wasm"
]

[workspace.package]
version = "1.0.0"

[workspace.dependencies]
tauri-build = { version = "1.3", features = [] }
tauri = { version = "1.3", features = ["shell-open"] }
wasm-pack = { version = "0.11.1", features = [] }
